# googletest-test

./: CMakeLists.txt
Trd-Party/googletest/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
Trd-Party/googletest/googletest/gtest.dir/Debug/gtest.tlog/: CL.21892.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
Trd-Party/googletest/googletest/gtest_main.dir/Debug/: gtest_main.vcxprojResolveAssemblyReference.cache
Trd-Party/googletest/googletest/gtest_main.dir/Debug/gtest_main.tlog/: CL.31124.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  lib.command.1.tlog  (+5 more)
UintTest/: CMakeLists.txt
UintTest/GQITestFrame/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  GQITestFrame.cpp  GQITestFrame.sln  GQITestFrame.vcxproj  GQITestFrame.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
UintTest/GQITestFrame/Debug/: GQITestFrame.exp  GQITestFrame.lib
UintTest/GQITestFrame/GQITestFrame.dir/Debug/GQITestFrame.tlog/: CL.1992.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  GQITestFrame.lastbuildstate  GQITestFrame.write.1u.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.25740-cvtres.write.1.tlog  link.command.1.tlog  link.read.1.tlog
src/: CMakeLists.txt  main.cpp
src/GQITestCommon/: CMakeLists.txt  GQITestCommon.cpp  GQITestCommon.h
src/Hello/: CMakeLists.txt  hello.cpp  hello.h
